# ai-portfolio

./: .gitignore  README.md  pyproject.toml
src/ai_portfolio/project_0_function_calling/: function_calling_example.py  python _ _3_14_.code-search
src/ai_portfolio/project_1_rag_system/: .gitignore  README.md  requirements.txt  test_config.py
src/ai_portfolio/project_1_rag_system/data/chroma_db/: chroma.sqlite3
src/ai_portfolio/project_1_rag_system/data/knowledge_base/: langchain_framework_overview.txt  prompt_engineering_best_practices.txt  retrieval_augmented_generation.md  vector_embeddings_guide.md
src/ai_portfolio/project_1_rag_system/docs/: ARCHITECTURE.md  GOVERNANCE.md  IMPLEMENTATION.md  SCOPE.md  STRATEGY.md
src/ai_portfolio/project_1_rag_system/src/: api.py  cli.py  config.py
src/ai_portfolio/project_1_rag_system/src/data_ingestion/: _init_.py  chroma_store.py  document_loader.py  embedding_generator.py  pipeline.py  text_splitter.py
src/ai_portfolio/project_1_rag_system/src/evaluation/: __init__.py  evaluation_agent.py  evaluation_pipeline.py  metrics.py
src/ai_portfolio/project_1_rag_system/src/rag/: _init_.py  query_engine.py  rag_pipeline.py  response_generator.py
