[project]
name = "ai-portfolio"
version = "0.1.0"
description = "AI Portfolio Projects"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "MIT"}
requires-python = ">=3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
